# auth_prod

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
entries/: models.py  permissions.py  serializer.py  urls.py  views.py
entries/migrations/: 0001_initial.py
tier_list/: asgi.py  settings.py  urls.py  wsgi.py
